--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,5 @@
     <string name="green_plants">Green Plants</string>
     <string name="flowers">Flowers</string>
     <string name="indoor_plants">Indoor Plants</string>
+    <string name="all">All</string>
 </resources>
